--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Atomic eCovers</title>
+    <meta name="description" content="Easily design eye-catching book covers with our extensive library of pre-designed mockups. Create stunning ecovers for your books in minutes." />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
